--- a/FiscaliZi.Colinfo/App.xaml
+++ b/FiscaliZi.Colinfo/App.xaml
@@ -2,16 +2,18 @@
     x:Class="FiscaliZi.Colinfo.App" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.ViewModel"
-    xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
+    xmlns:ignore="http://www.galasoft.ch/ignore"
     StartupUri="MainWindow.xaml"  
-    d1p1:Ignorable="d">
+    d1p1:Ignorable="d ignore">
     
-  <Application.Resources>
-    <ResourceDictionary>
-      <vm:ViewModelLocator x:Key="Locator" 
+
+    <Application.Resources>
+        
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator" 
                            d:IsDataSource="True" />
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
@@ -23,8 +25,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <!-- Locais -->
                 <ResourceDictionary Source="Resources/Dictionaries/dicColinfo.xaml"/>
-                <ResourceDictionary Source="Resources/Dictionaries/dicStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
   </Application.Resources>
+    
 </Application>
