--- a/FiscaliZi.Colinfo/Views/Coleta.xaml
+++ b/FiscaliZi.Colinfo/Views/Coleta.xaml
@@ -1,54 +1,41 @@
-﻿<Metro:MetroWindow x:Class="FiscaliZi.Colinfo.Views.Coleta"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Metro="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:local="clr-namespace:FiscaliZi.Colinfo.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+﻿<UserControl
+    x:Class="FiscaliZi.Colinfo.Views.Coleta"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Metro="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:Model="clr-namespace:FiscaliZi.Colinfo.Model"
+    xmlns:local="clr-namespace:FiscaliZi.Colinfo.Views"
+    mc:Ignorable="d" 
+    d:DesignHeight="300" Width="734.667"
+    DataContext="{Binding Source={StaticResource Locator}, Path=ColetaVM}">
+
+    <UserControl.Resources>
+        <Model:TotalValPedsConverter x:Key="TotalValPedsConverter" />
+        <Model:TotalPedsConverter x:Key="TotalPedsConverter" />
+        <Model:ColetadosConverter x:Key="ColetadosConverter" />
+        <Model:SitCadastroClienteConverter x:Key="SitCadastroClienteConverter" />
+        <Model:RejeicoesCNPJConverter x:Key="RejeicoesCNPJConverter" />
+        <Model:Total_RejeicoesCNPJConverter x:Key="Total_RejeicoesCNPJConverter" />
+        <Model:Total_FormPgtConverter x:Key="Total_FormPgtConverter" />
+        <Model:RotaConverter x:Key="RotaConverter" />
+        <Model:SimplificaNomeVendedorConverter x:Key="SimplificaNomeVendedorConverter" />
+        <Model:SituacaoCNPJColorConverter x:Key="SituacaoCNPJColorConverter" />
+        <Model:CurrentAccentColorConverter x:Key="CurrentAccentColorConverter" />
+    </UserControl.Resources>
     
-    <Window.Resources>
-        <dsg:TotalValPedsConverter x:Key="TotalValPedsConverter" />
-        <dsg:TotalPedsConverter x:Key="TotalPedsConverter" />
-        <dsg:ColetadosConverter x:Key="ColetadosConverter" />
-        <dsg:SitCadastroClienteConverter x:Key="SitCadastroClienteConverter" />
-        <dsg:RejeicoesCNPJConverter x:Key="RejeicoesCNPJConverter" />
-        <dsg:Total_RejeicoesCNPJConverter x:Key="Total_RejeicoesCNPJConverter" />
-        <dsg:Total_FormPgtConverter x:Key="Total_FormPgtConverter" />
-        <dsg:RotaConverter x:Key="RotaConverter" />
-        <dsg:SimplificaNomeVendedorConverter x:Key="SimplificaNomeVendedorConverter" />
-        <dsg:SituacaoCNPJColorConverter x:Key="SituacaoCNPJColorConverter" />
-        <dsg:CurrentAccentColorConverter x:Key="CurrentAccentColorConverter" />
-    </Window.Resources>
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="NavigatedTo">
-            <i:InvokeCommandAction Command="{Binding NavigatedToCommand}" />
-        </i:EventTrigger>
-        <i:EventTrigger EventName="NavigatedFrom">
-            <i:InvokeCommandAction Command="{Binding NavigatedFromCommand}" />
-        </i:EventTrigger>
-        <i:EventTrigger EventName="NavigatingFrom">
-            <i:InvokeCommandAction Command="{Binding NavigatingFromCommand}" />
-        </i:EventTrigger>
-        <i:EventTrigger EventName="FragmentNavigation">
-            <i:InvokeCommandAction Command="{Binding FragmentNavigationCommand}" />
-        </i:EventTrigger>
-        <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
-        </i:EventTrigger>
-        <i:EventTrigger EventName="IsVisibleChanged">
-            <i:InvokeCommandAction Command="{Binding IsVisibleChangedCommand}" />
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
     <Grid Margin="10" >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
-            <ListBox x:Name="lstVendedores" ItemsSource="{Binding Vendedores}" 
-                     IsSynchronizedWithCurrentItem="True" SelectedIndex="0">
+            <ListBox 
+                x:Name="lstVendedores" 
+                ItemsSource="{Binding Vendedores}" 
+                IsSynchronizedWithCurrentItem="True" 
+                SelectedIndex="0" Width="165">
                 <ListBox.ItemTemplate>
                     <DataTemplate x:Name="TesteDT">
                         <Grid Height="40">
@@ -63,7 +50,7 @@
                                 <RowDefinition Height="20"/>
                                 <RowDefinition Height="20"/>
                             </Grid.RowDefinitions>
-                            <Rectangle Fill="{StaticResource businessman}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="0,1"/>
+                            <Rectangle Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="0,1"/>
                             <TextBlock FontWeight="Bold" Grid.Column="1" Grid.Row="0" Width="Auto" Margin="3,3,0,0" FontSize="10.5" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin" >
                                 <TextBlock.Text>
                                     <MultiBinding StringFormat="{}{0} ({1}) {2}">
@@ -78,13 +65,13 @@
                             <TextBlock Grid.Column="2" Grid.Row="1" Margin="5,1,0,5.033" Width="Auto" FontSize="10.5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"><Run Text="PES: " FontWeight="Bold"/><Run Text=" "/><Run Text="000.000,00"/></TextBlock>
                             <TextBlock Grid.Column="3" Grid.Row="0" Margin="5,3,0,1" FontSize="10.5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"><Run Text="ENV: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding DataEnvio, StringFormat=\{0:dd/MM hh:mm:ss\}}"/></TextBlock>
                             <TextBlock Grid.Column="3" Grid.Row="1" Margin="5,1,0,3" FontSize="10.5" HorizontalAlignment="Stretch" Width="Auto" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"><Run Text="VAL: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos, Converter={StaticResource TotalValPedsConverter}}"/></TextBlock>
-                            <mui:ModernButton Grid.Column="4" Grid.Row="0" Margin="2,1.5,1,1.5" 
+                            <Button Grid.Column="4" Grid.Row="0" Margin="2,1.5,1,1.5" 
                                               Command="{Binding DataContext.RemoveCommand, ElementName=lstVendedores}" 
-                                              CommandParameter="{Binding}" IconData="F1M25.3333,23.75L50.6667,23.75C51.5411,23.75,51.8541,27.3125,51.8541,27.3125L24.1458,27.3125C24.1458,27.3125,24.4589,23.75,25.3333,23.75z M35.625,19.7917L40.375,19.7917C40.8122,19.7917 41.9583,20.9378 41.9583,21.375 41.9583,21.8122 40.8122,22.9584 40.375,22.9584L35.625,22.9584C35.1878,22.9584 34.0416,21.8122 34.0416,21.375 34.0416,20.9378 35.1878,19.7917 35.625,19.7917z M27.7083,28.5L48.2916,28.5C49.1661,28.5,49.875,29.2089,49.875,30.0834L48.2916,53.8334C48.2916,54.7078,47.5828,55.4167,46.7083,55.4167L29.2917,55.4167C28.4172,55.4167,27.7083,54.7078,27.7083,53.8334L26.125,30.0834C26.125,29.2089,26.8339,28.5,27.7083,28.5z M30.0833,31.6667L30.4792,52.25 33.25,52.25 32.8542,31.6667 30.0833,31.6667z M36.4167,31.6667L36.4167,52.25 39.5833,52.25 39.5833,31.6667 36.4167,31.6667z M43.1458,31.6667L42.75,52.25 45.5208,52.25 45.9167,31.6667 43.1458,31.6667z" 
-                                              Width="Auto" Height="Auto" IconWidth="16" IconHeight="16" 
+                                              CommandParameter="{Binding}"
+                                              Width="Auto" Height="Auto"
                                               Padding="0" UseLayoutRounding="False" 
                                               ClickMode="Release" HorizontalAlignment="Stretch" 
-                                              VerticalAlignment="Stretch" Style="{DynamicResource DelListBoxItem}" Foreground="#FFCDC5C5" EllipseDiameter="18" EllipseStrokeThickness="0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin" />
+                                              VerticalAlignment="Stretch" Foreground="#FFCDC5C5"/>
                             <Viewbox Grid.Column="4" Grid.Row="1" Width="Auto" Height="Auto" Margin="2.5,2" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin">
                                 <Rectangle x:Name="RECT" Height="16" Grid.RowSpan="2" 
                                            VerticalAlignment="Top" Width="16" Margin="0" 
@@ -116,11 +103,11 @@
                     </Style>
                 </ListBox.Resources>
             </ListBox>
-            <DataGrid x:Name="dgPedidos" ColumnHeaderStyle="{StaticResource dgvHeaderStyle}" 
+            <DataGrid x:Name="dgPedidos" 
                       AutoGenerateColumns="False" CanUserAddRows="False" ItemsSource="{Binding Vendedores/Pedidos}" CanUserResizeColumns="False" CanUserReorderColumns="False" CanUserDeleteRows="False" CanUserResizeRows="False" IsReadOnly="True" HeadersVisibility="Column" Margin="15,0,0,0" IsSynchronizedWithCurrentItem="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Ped" Binding="{Binding Numero}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" />
-                    <DataGridTextColumn Header="Rota" Binding="{Binding Cliente.Rota}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" />
+                    <DataGridTextColumn Header="Ped" Binding="{Binding Numero}" CanUserResize="False" />
+                    <DataGridTextColumn Header="Rota" Binding="{Binding Cliente.Rota}" CanUserResize="False" />
                     <DataGridTextColumn Header="Cliente" CanUserResize="False" Width="70">
                         <DataGridTextColumn.Binding>
                             <MultiBinding StringFormat=" {0}-{1}">
@@ -130,14 +117,14 @@
                         </DataGridTextColumn.Binding>
                     </DataGridTextColumn>
                     <DataGridTextColumn Header="Razão" Binding="{Binding Cliente.Razao}" CanUserResize="False" />
-                    <DataGridTextColumn Header="CNPJ" Binding="{Binding Cliente.CNPJ}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" />
-                    <DataGridTextColumn Header="IE" Binding="{Binding Cliente.IE}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" Width="120" />
-                    <DataGridTextColumn Header="Val. Ped" Binding="{Binding ValorTotal}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" Width="80" />
-                    <DataGridTextColumn Header="Sit. IE\CNPJ" Binding="{Binding Cliente.Situacao, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" CellStyle="{StaticResource dgvCenterCellStyle}" CanUserResize="False" />
+                    <DataGridTextColumn Header="CNPJ" Binding="{Binding Cliente.CNPJ}"  CanUserResize="False" />
+                    <DataGridTextColumn Header="IE" Binding="{Binding Cliente.IE}"  CanUserResize="False" Width="120" />
+                    <DataGridTextColumn Header="Val. Ped" Binding="{Binding ValorTotal}" CanUserResize="False" Width="80" />
+                    <DataGridTextColumn Header="Sit. IE\CNPJ" Binding="{Binding Cliente.Situacao, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True}" CanUserResize="False" />
                     <DataGridTemplateColumn >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Detalhes" Click="Button_Click"/>
+                                <Button Content="Detalhes" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -155,4 +142,4 @@
                     CommandParameter="{Binding ItemsSource, ElementName=lstVendedores}" />
         </StackPanel>
     </Grid>
-</Metro:MetroWindow>
+</UserControl>
