--- a/FiscaliZi.Colinfo/App.xaml
+++ b/FiscaliZi.Colinfo/App.xaml
@@ -20,13 +20,14 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <!-- Accent and AppTheme setting -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/teal.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/baselight.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
                 <!-- Locais -->
                 <ResourceDictionary Source="Resources/Dictionaries/dicColinfo.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/dicImages.xaml"/>
                 <!-- <ResourceDictionary Source="Resources/Dictionaries/CustomAccents/CustomTheme.xaml"/> -->
-                <ResourceDictionary Source="Resources/Dictionaries/CustomAccents/CustomAccent.xaml"/>
+                <!-- <ResourceDictionary Source="Resources/Dictionaries/CustomAccents/CustomAccent.xaml"/> -->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
   </Application.Resources>
